# recipe-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  docker-compose.dev.yml  docker-compose.prod.yml
.github/workflows/: docker.yml  migrate.yml
client/: Cargo.toml  Makefile  index.html  tailwind.config.js
client/src/: api.rs  app.rs  main.rs  router.rs  store.rs
client/src/api/: feedback_api.rs  mod.rs  search_api.rs  user_api.rs
client/src/components/: alert.rs  header.rs  mod.rs  song_card.rs
client/src/components/ui/: button.rs  input.rs  mod.rs  search.rs  select.rs  spinner.rs
client/src/pages/: home_page.rs  login_page.rs  profile_page.rs  register_page.rs
client/styles/: tailwind.css
common/: Cargo.toml
common/src/schema/: album.rs  artist.rs  feedback.rs  mod.rs  platform.rs  select.rs  song.rs  user.rs
ml/: Cargo.toml
ml/data/: mod.rs
ml/model/: mod.rs
server/: Cargo.toml  Makefile
server/migrations/: 20240218032928_init.down.sql  20240218032928_init.up.sql  20240226080837_new-types.down.sql  20240226080837_new-types.up.sql  20240323211619_platforms_table.down.sql  20240323211619_platforms_table.up.sql  20240410150713_song_table_expansion.down.sql  20240410150713_song_table_expansion.up.sql
server/src/: config.rs  main.rs  middleware.rs  model.rs
server/src/handlers/: auth_handler.rs  user_handler.rs
server/src/routes/: auth_routes.rs  user_routes.rs
server/src/utils/: api_error.rs  hash.rs  jwt.rs  mod.rs
