[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
gloo = "0.11.0"
reqwasm = "0.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["serde", "v4", "js"] }
validator = { version = "0.16.1", features = ["derive"] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.67", features = ["HtmlInputElement", "Window", "HtmlDocument", "FormData", "Location", "HtmlTextAreaElement", "HtmlSelectElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
