[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "ml"
path = "./mod.rs"

[dependencies]
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
clap = "4.5.4"
common = { version = "0.1.0", path = "../common" }
hf-hub = { version = "0.3.2", features = ["tokio"] }
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
serde = "1.0.197"
serde_json = "1.0.115"
tokenizers = "0.15.2"
