[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.33", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
oauth2 = "4.4.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
